# lemontext

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml  c-cpp.yml
src/: CMakeLists.txt  helloworld.cc  helloworld.hh  main.cc
src/main/: main.cc
tests/: CMakeLists.txt
